// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connector DetailsPage Page Test Initial snapshot should match render 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container large header StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <a
          class="breadCrumb"
          href="/account/dummy/resources/connectors"
        >
          Resources
        </a>
        <span>
          /
        </span>
        <a
          class="breadCrumb"
          href="/account/dummy/resources/connectors"
        >
          Connectors
        </a>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--margin-left-xsmall StyledProps--margin-right-xsmall"
          data-icon="service-dockerhub"
        >
          <svg
            height="35"
            viewBox="0 0 14 10"
            width="35"
          >
            <path
              d="M5.8 3.3h1.3v1.3H5.8zM7.2 3.3h1.3v1.3H7.2zM4.3 3.3h1.3v1.3H4.3zM2.9 3.3h1.3v1.3H2.9zM1.4 3.3h1.3v1.3H1.4zM5.8 1.9h1.3v1.3H5.8zM5.8.4h1.3v1.3H5.8zM4.3 1.9h1.3v1.3H4.3zM2.9 1.9h1.3v1.3H2.9z"
            />
            <path
              d="M.8 7.7c-.1-.2-.2-.3-.3-.4l-.1-.2c0-.1-.1-.2-.1-.4v-.2C.1 6.1 0 5.7 0 5.2v-.4h9.5c.7 0 1.4-.2 1.7-.5-.2-.2-.4-.6-.4-1 0-.5.1-1 .3-1.3l.1-.1.1.1c.3.2.9.8.9 1.6.3-.1.5-.1.8-.1.4 0 .7.1.9.2h.1v.1c-.3.6-1 .9-1.8.9h-.3c-1.2 3-3.7 4.6-7.3 4.6-.6 0-1.2-.1-1.8-.3-.7-.2-1.3-.6-1.8-1.1zm4.4 1.4c-.9-.4-1.3-.9-1.6-1.5-.4.1-.7.1-1.2.2H1.2C2 8.6 3 9.1 4.8 9.1zm-1-2.4c-.2 0-.3.2-.3.3 0 .2.2.3.3.3.2 0 .3-.2.3-.3s-.1-.3-.3-.3z"
            />
            <path
              d="M4.2 6.8s.1 0 0 0c.1 0 .1.1 0 0 .1.2.1.2.2.2 0 0 .1 0 .1-.1V7c0 .1-.1.3-.3.3S4 7.2 4 7c0-.1.1-.2.2-.2"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-size-medium StyledProps--font-weight-bold"
          >
            Sample
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
          >
            Sample
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <span
          class="bp3-tag tags activeTag"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Connection
          </span>
        </span>
        <span
          class="bp3-tag tags"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Referenced by
          </span>
        </span>
        <span
          class="bp3-tag tags"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Activity History
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-huge StyledProps--padding-bottom-large StyledProps--padding-right-huge"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
          >
            VISUAL
          </div>
          <div
            class="item"
          >
            YAML
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button StyledProps--main editButton"
          id="editDetailsBtn"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Edit Details
          </span>
        </button>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main detailsSectionContainer"
        >
          <div
            class="StyledProps--font StyledProps--main detailsSection"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Overview
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Docker Connector Name
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Sample
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Identifier
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Sample
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Tags
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <span
                  class="Tag--main"
                >
                  <span
                    class="bp3-tag bp3-minimal"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      connector
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main detailsSection"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Credentials
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Provider Type
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  DockerHub
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Docker Registry URL
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Sample
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Credential Type
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Username and Password
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Username
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Sample
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Password
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.Sample
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorDetailsWrapper"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                Connector Activity
              </p>
              <div
                class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                >
                  Connector Created
                </p>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                  >
                    12/23/2020 09:10 am
                  </span>
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                >
                  Last Updated
                </p>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                  >
                    12/23/2020 09:10 am
                  </span>
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical StyledProps--main"
            >
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main testButton"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Test Connection
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector DetailsPage Page Test Initial snapshot should match render at org level 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container large header StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <a
          class="breadCrumb"
          href="/account/dummy/org/dummyOrg"
        />
        <span>
          /
        </span>
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
        >
          <a
            class="breadCrumb"
            href="/account/dummy/org/dummyOrg/resources/connectors"
          >
            Resources
          </a>
          <span>
            /
          </span>
          <a
            class="breadCrumb"
            href="/account/dummy/org/dummyOrg/resources/connectors"
          >
            Connectors
          </a>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--margin-left-xsmall StyledProps--margin-right-xsmall"
          data-icon="service-dockerhub"
        >
          <svg
            height="35"
            viewBox="0 0 14 10"
            width="35"
          >
            <path
              d="M5.8 3.3h1.3v1.3H5.8zM7.2 3.3h1.3v1.3H7.2zM4.3 3.3h1.3v1.3H4.3zM2.9 3.3h1.3v1.3H2.9zM1.4 3.3h1.3v1.3H1.4zM5.8 1.9h1.3v1.3H5.8zM5.8.4h1.3v1.3H5.8zM4.3 1.9h1.3v1.3H4.3zM2.9 1.9h1.3v1.3H2.9z"
            />
            <path
              d="M.8 7.7c-.1-.2-.2-.3-.3-.4l-.1-.2c0-.1-.1-.2-.1-.4v-.2C.1 6.1 0 5.7 0 5.2v-.4h9.5c.7 0 1.4-.2 1.7-.5-.2-.2-.4-.6-.4-1 0-.5.1-1 .3-1.3l.1-.1.1.1c.3.2.9.8.9 1.6.3-.1.5-.1.8-.1.4 0 .7.1.9.2h.1v.1c-.3.6-1 .9-1.8.9h-.3c-1.2 3-3.7 4.6-7.3 4.6-.6 0-1.2-.1-1.8-.3-.7-.2-1.3-.6-1.8-1.1zm4.4 1.4c-.9-.4-1.3-.9-1.6-1.5-.4.1-.7.1-1.2.2H1.2C2 8.6 3 9.1 4.8 9.1zm-1-2.4c-.2 0-.3.2-.3.3 0 .2.2.3.3.3.2 0 .3-.2.3-.3s-.1-.3-.3-.3z"
            />
            <path
              d="M4.2 6.8s.1 0 0 0c.1 0 .1.1 0 0 .1.2.1.2.2.2 0 0 .1 0 .1-.1V7c0 .1-.1.3-.3.3S4 7.2 4 7c0-.1.1-.2.2-.2"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-size-medium StyledProps--font-weight-bold"
          >
            Sample
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
          >
            Sample
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <span
          class="bp3-tag tags activeTag"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Connection
          </span>
        </span>
        <span
          class="bp3-tag tags"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Referenced by
          </span>
        </span>
        <span
          class="bp3-tag tags"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Activity History
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-huge StyledProps--padding-bottom-large StyledProps--padding-right-huge"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
          >
            VISUAL
          </div>
          <div
            class="item"
          >
            YAML
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button StyledProps--main editButton"
          id="editDetailsBtn"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Edit Details
          </span>
        </button>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main detailsSectionContainer"
        >
          <div
            class="StyledProps--font StyledProps--main detailsSection"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Overview
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Docker Connector Name
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Sample
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Identifier
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Sample
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Tags
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <span
                  class="Tag--main"
                >
                  <span
                    class="bp3-tag bp3-minimal"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      connector
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main detailsSection"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Credentials
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Provider Type
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  DockerHub
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Docker Registry URL
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Sample
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Credential Type
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Username and Password
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Username
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Sample
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Password
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.Sample
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorDetailsWrapper"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                Connector Activity
              </p>
              <div
                class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                >
                  Connector Created
                </p>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                  >
                    12/23/2020 09:10 am
                  </span>
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                >
                  Last Updated
                </p>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                  >
                    12/23/2020 09:10 am
                  </span>
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical StyledProps--main"
            >
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main testButton"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Test Connection
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
